--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "express": "^4.17.1",
     "nodemon": "^2.0.9"
   }
 }
